Add group search results.
