# common/src/main/resources/META-INF/openapi.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.2",
     "info": {
         "title": "Apicurio Registry API [v2]",
-        "version": "2.3.1-SNAPSHOT",
+        "version": "2.2.4-SNAPSHOT",
         "description": "Apicurio Registry is a datastore for standard event schemas and API designs. Apicurio Registry enables developers to manage and share the structure of their data using a REST interface. For example, client applications can dynamically push or pull the latest updates to or from the registry without needing to redeploy. Apicurio Registry also enables developers to create rules that govern how registry content can evolve over time. For example, this includes rules for content validation and version compatibility.\n\nThe Apicurio Registry REST API enables client applications to manage the artifacts in the registry. This API provides create, read, update, and delete operations for schema and API artifacts, rules, versions, and metadata. \n\nThe supported artifact types include:\n- Apache Avro schema\n- AsyncAPI specification\n- Google protocol buffers\n- GraphQL schema\n- JSON Schema\n- Kafka Connect schema\n- OpenAPI specification\n- Web Services Description Language\n- XML Schema Definition\n\n\n**Important**: The Apicurio Registry REST API is available from `https://MY-REGISTRY-URL/apis/registry/v2` by default. Therefore you must prefix all API operation paths with `../apis/registry/v2` in this case. For example: `../apis/registry/v2/ids/globalIds/{globalId}`.\n",
         "contact": {
             "name": "Apicurio",
@@ -2830,7 +2830,7 @@
                     }
                 },
                 "operationId": "deleteGroupById",
-                "summary": "Delete group by ID.",
+                "summary": "Delete a group by the specified ID.",
                 "description": "Deletes a group by identifier.\n\nThis operation can fail for the following reasons:\n\n* A server error occurred (HTTP error `500`)\n* The group does not exist (HTTP error `404`)\n"
             },
             "parameters": [
@@ -4025,13 +4025,62 @@
                     "owner": "bwayne"
                 }
             },
+            "SearchedGroup": {
+                "description": "Models a single group from the result set returned when searching for groups.",
+                "required": [
+                    "description",
+                    "createdBy",
+                    "createdOn",
+                    "id",
+                    "modifiedBy",
+                    "modifiedOn"
+                ],
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "$ref": "#/components/schemas/GroupId",
+                        "description": ""
+                    },
+                    "description": {
+                        "description": "",
+                        "type": "string"
+                    },
+                    "createdOn": {
+                        "format": "date-time",
+                        "description": "",
+                        "type": "string",
+                        "x-codegen-formatPattern": "yyyy-MM-dd'T'HH:mm:ssZ"
+                    },
+                    "createdBy": {
+                        "description": ""
+                    },
+                    "modifiedOn": {
+                        "format": "date-time",
+                        "description": "",
+                        "type": "string",
+                        "x-codegen-formatPattern": "yyyy-MM-dd'T'HH:mm:ssZ"
+                    },
+                    "modifiedBy": {
+                        "description": "",
+                        "type": "string"
+                    }
+                },
+                "example": {
+                    "id": "My-Group",
+                    "name": "Group Name",
+                    "description": "Description of the group",
+                    "createdBy": "user1",
+                    "createdOn": "2019-03-22T12:51:19Z",
+                    "modifiedBy": "user1",
+                    "modifiedOn": "2019-03-22T12:51:19Z"
+                }
+            },
             "GroupMetaData": {
                 "title": "Root Type for GroupMetaData",
                 "description": "",
                 "required": [
                     "id",
                     "description",
-                    "artifactsType",
                     "createdBy",
                     "createdOn",
                     "modifiedBy",
@@ -4046,10 +4095,6 @@
                     },
                     "description": {
                         "type": "string"
-                    },
-                    "type": {
-                        "$ref": "#/components/schemas/ArtifactType",
-                        "description": ""
                     },
                     "createdBy": {
                         "type": "string"
@@ -4086,6 +4131,27 @@
                     }
                 }
             },
+            "GroupSearchResults": {
+                "description": "Describes the response received when searching for groups.",
+                "required": [
+                    "count",
+                    "groups"
+                ],
+                "type": "object",
+                "properties": {
+                    "groups": {
+                        "description": "The groups returned in the result set.",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/SearchedGroup"
+                        }
+                    },
+                    "count": {
+                        "description": "The total number of groups that matched the query that produced the result set (may be \nmore than the number of groups in the result set).",
+                        "type": "integer"
+                    }
+                }
+            },
             "CreateGroupMetaData": {
                 "title": "Root Type for CreateGroupMetaData",
                 "description": "",
@@ -4101,10 +4167,6 @@
                         "$ref": "#/components/schemas/Properties",
                         "description": ""
                     },
-                    "type": {
-                        "$ref": "#/components/schemas/ArtifactType",
-                        "description": ""
-                    },
                     "id": {
                         "description": "",
                         "type": "string"
@@ -4116,8 +4178,7 @@
                     "properties": {
                         "custom-1": "foo",
                         "custom-2": "bar"
-                    },
-                    "type": "AVRO"
+                    }
                 }
             }
         },
@@ -4249,7 +4310,7 @@
         },
         {
             "name": "Versions",
-            "description": "Whenever an artifact's content is updated, the old versions of the artifact's content\nare not lost.  All versions can be listed and accessed if necessary.  This section \ndescribes the operations used to list and access all versions of an artifact's content\nand metadata."
+            "description": "When artifact content is updated, old versions of the artifact content are not lost.  All versions can be listed and accessed if necessary. This section describes the operations used to list and access all versions of an artifact's content and metadata."
         },
         {
             "name": "Artifact rules",
